# rainbowtags

./: README.md  pyproject.toml  rainbow_barcode.py
src/rainbowtags/: barcode.py  designer.py
